[package]
edition = "2021"
name = "minimal-versions"
publish = false
version = "0.0.0"

[features]
tls-rustls = ["axum-server2/tls-rustls"]
tls-rustls-no-provider = ["axum-server2/tls-rustls-no-provider"]
tls-openssl = ["axum-server2/tls-openssl"]

[dependencies]
axum-server2 = { path = ".." }
# `tower` v0.5.0 incorrectly only requires `tower-layer` v0.3.0
tower-layer = "0.3.3"
